--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./scripts/pg_multiple_dbs.sh:/docker-entrypoint-initdb.d/multiple-databases.sh
       - postgres_data:/var/lib/postgresql/data
     env_file:
-      - ./env/postgres.env
+      - ./.env/postgres.env
 
 volumes:
   postgres_data:
